# chshersh.github.io

./: .gitignore  .travis.yml  CNAME  README.md  atom.xml  blog_generator.ml  cabal.project  cabal.project.freeze  chshersh-site.cabal  comonadic-builders.html  course.html  cps.html  deploy.sh  elm-watch.json  elm.json  feed_generator.ml  feeds.yaml  github-actions.html  goalkeeper.html  haskell-revitalisation.html  index.html  recordwildcards.html  rerender.sh  rss.xml  site.hs  space-leak.html  template-article.html  travis.html  type-errors.html
.github/workflows/: ci.yml
assets/: logo.txt
blog/: 2019-02-25-haskell-travis.html  2019-03-25-comonadic-builders.html  2019-07-01-type-errors.html  2019-07-29-recordwildcards.html  2020-05-07-github-actions.html  2022-06-30-cps.html  2022-08-08-space-leak.html  2023-12-16-8-months-of-ocaml-after-8-years-of-haskell.html  2024-02-05-learn-lambda-calculus-in-10-minutes-with-ocaml.html  2024-05-20-7-ocaml-gotchas.html  2024-07-30-pragmatic-category-theory-part-01.html  2024-08-19-pragmatic-category-theory-part-02.html  2024-12-20-pragmatic-category-theory-part-03.html  2025-01-06-the-most-elegant-configuration-language.html
css/: article.css  default.css  dracula.css  main-page.css  post.css  resume.css  styles.css
cv-source-code/: template.tex  twentysecondcv.cls
js/: article.js  image_popup.js  index.js  main.min.js
posts/: 2019-02-25-haskell-travis.html  2019-02-25-haskell-travis.md  2019-02-28-haskell-travis.html  2019-02-28-haskell-travis.md  2019-03-25-comonadic-builders.html  2019-03-25-comonadic-builders.md  2019-07-01-type-errors.md  2019-07-29-recordwildcards.md  2020-05-07-github-actions.md  2020-09-08-goalkeeper.md  2021-12-08-haskell-course.md  2022-06-30-cps.md  2022-08-08-space-leak.md  2022-10-20-haskell-revitalisation.md  2023-12-16-8-months-of-ocaml-after-8-years-of-haskell.md  2024-02-05-learn-lambda-calculus-in-10-minutes-with-ocaml.md  2024-05-20-7-ocaml-gotchas.md  2024-07-30-pragmatic-category-theory-part-01.md  2024-08-19-pragmatic-category-theory-part-02.md  2024-12-20-pragmatic-category-theory-part-03.md  2025-01-06-the-most-elegant-configuration-language.md
scripts/: deploy.sh  lexical_illusions.sh  passive.sh  weasels.sh
scss/: _bootstrap-overrides.scss  _global.scss  _nav.scss  _variables.scss  resume.scss
src/: Main.elm  Model.elm  Msg.elm  Port.elm  Prelude.hs  Update.elm  View.elm
src/Chshersh/: Experience.hs  Feed.hs  Main.hs  Posts.hs  Project.hs  Social.hs
src/Model/: Blog.elm  Dimensions.elm  Info.elm  Key.elm  Link.elm  Msg.elm  Route.elm  Social.elm
src/Model/Blog/: Data.elm
src/Page/: Layout.elm  Main.elm
src/View/: Code.elm  Color.elm  Element.elm  Font.elm  Key.elm  List.elm  SayMyName.elm
src/Website/: Experience.hs  Feed.hs  Main.hs  Posts.hs  Project.hs  Social.hs
templates/: article.html  atom.xml  index.html  post.html  rss.xml
