cabal-version:         2.4
name:                  chshersh-site
version:               1.0
synopsis:              chshersh website
description:           chshersh website
homepage:              https://github.com/chshersh/chshersh.github.io
bug-reports:           https://github.com/chshersh/chshersh.github.io/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Dmitrii Kovanikov
maintainer:            kovanikov@gmail.com
copyright:             2019-2021 Dmitrii Kovanikov
category:              Web
build-type:            Simple
extra-doc-files:       README.md
tested-with:           GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/chshersh/chshersh.github.io.git

common common-options
  build-depends:       base ^>= 4.14
                     , relude ^>= 1.0

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src

  exposed-modules:     Website.Experience
                       Website.Feed
                       Website.Main
                       Website.Posts
                       Website.Project
                       Website.Social

  build-depends:       hakyll ^>= 4.15
                     , hakyll-sass ^>= 0.2.4
                     , hakyll-shortcut-links ^>= 0.1.0.0
                     , pandoc ^>= 2.16
                     , pandoc-types ^>= 1.22
                     , text ^>= 1.2

executable site
  import:              common-options
  main-is:             site.hs
  build-depends:       chshersh-site
  ghc-options:        -threaded