cabal-version:         3.0
name:                  chshersh-site
version:               1.0
synopsis:              My personal website
description:           A website build with Hakyll
homepage:              https://github.com/chshersh/chshersh.github.io
bug-reports:           https://github.com/chshersh/chshersh.github.io/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Dmitrii Kovanikov
maintainer:            kovanikov@gmail.com
copyright:             2019-2022 Dmitrii Kovanikov
category:              Web
build-type:            Simple
extra-doc-files:       README.md
tested-with:           GHC == 9.2.4

source-repository head
  type:                git
  location:            https://github.com/chshersh/chshersh.github.io.git

common common-options
  build-depends:       base ^>= 4.16
                     , relude ^>= 1.1

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -Winvalid-haddock
                       -Wredundant-bang-patterns
                       -Woperator-whitespace

  default-language:    Haskell2010

  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StrictData
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src

  exposed-modules:     Website.Experience
                       Website.Feed
                       Website.Main
                       Website.Posts
                       Website.Project
                       Website.Social

  build-depends:       hakyll ^>= 4.15
                     , hakyll-sass ^>= 0.2.4
                     , hakyll-shortcut-links ^>= 0.1.0.0
                     , pandoc ^>= 2.19.2
                     , pandoc-types ^>= 1.22
                     , text >= 1.2 && < 2.1
                     , pretty-simple

executable site
  import:              common-options
  main-is:             site.hs
  build-depends:       chshersh-site, base
  ghc-options:        -threaded
